# QtMobile

./: .gitignore
MyApp/: CMakeLists.txt
MyApp/Source/: main.cpp
MyApp/qml/: Main.qml  qmldir
Инструкции к урокам/: Инструкция к настройке окружения.md
